fix: mobile spacing to respect sidebar height

--- a/apps/uniroom/src/app/app.component.scss
+++ b/apps/uniroom/src/app/app.component.scss
@@ -20,7 +20,6 @@ ion-app {
 
 @media (max-width: 767px) {
   .main-content {
-    padding-bottom: 60px;
     margin-left: 0;
     width: 100vw;
   }
